# AI-Researcher-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  TECHNICAL_DESIGN.md  TECHNICAL_DESIGN.zh-CN.md  TECHNICAL_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
AI/: config.py
ai_researcher_assistant/: __init__.py  cli.py  cli_session.py
ai_researcher_assistant/core/: __init__.py  base_agent.py  config.py  exceptions.py  message.py
ai_researcher_assistant/harness/: __init__.py  context.py  coordination.py  parsing.py  schema.py
ai_researcher_assistant/llm/: __init__.py  anthropic.py  base.py  capabilities.py  factory.py  local.py  openai.py
ai_researcher_assistant/memory/: __init__.py  base.py  in_memory.py  long_term.py  rag.py  short_term.py
ai_researcher_assistant/orchestration/: __init__.py  agent.py  graph.py  loop.py  middleware.py  state.py  subagent.py
ai_researcher_assistant/skills/: __init__.py  base.py  loader.py  markdown.py  registry.py
ai_researcher_assistant/skills/buildin/: __init__.py  arxiv_fetcher.py  paper_reader.py  paper_writer.py
ai_researcher_assistant/skills/builtin/: __init__.py  arxiv_fetcher.py  harness_coordination.py  paper_reader.py  paper_writer.py  rag_search.py  subagent_task.py
ai_researcher_assistant/skills/templates/: custom_skill_template.md
core/: __init__.py  base_agent.py  config.py
examples/: 01_research_assistant.py
llm/: __init__.py  anthropic.py  factory.py  local.py  openai.py
memory/: long_term.py  rag.py  short_term.py
orchestration/: __init__.py  graph.py  loop.py  middleware.py  state.py
skills/: __init__.py
skills/buildin/: __init__.py  arxiv_fetcher.py  paper_writting.py
skills/template/: custom_skill_template.md
src/: main.py
tests/: test_basic.py  test_cli_and_planning.py  test_harness_refactor.py
